# practice_recipes_bot

./: .gitignore  db.sqlite3  main.py  pyproject.toml  test.py  test.session.sql
app/: config.py  translations.py  utils.py
app/filters/: admin.py
app/handlers/: admin.py  admin_add_recipe.py  admin_update_recipe.py  basic.py  recipe.py
app/keyboards/: admin.py  base.py  main_menu.py  pagination.py  recipe.py
app/middlewares/: admin.py  init.py
app/models/: base.py  enum.py  recipe.py
app/repository/: admin.py  ingredient.py  recipe.py  tag.py
app/service/: admin.py  admin_add_recipe.py  ingredient.py  recipe.py  tag.py
app/types/: keyboard.py  pagination.py
fixtures/: test.sql
